Common functionallity moved to erland.webapp.common.image